# Homework_web_9

./: main.py  pyproject.toml  quotes.json
